fixing too wide parameter window

--- a/openjscad.css
+++ b/openjscad.css
@@ -7,6 +7,7 @@
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
+  
   padding: 15px;
   color: black;
   width: 100%;
@@ -25,14 +26,12 @@
 }
 
 #filebuttons {
-  /*float: right;*/
+  /* float: right; */
   margin-left: 2em;
   display: inline;
 }
 
 canvas { 
-  width: 100%; 
-  height: 100%; 
   cursor: move; 
 }
 
@@ -58,15 +57,17 @@ canvas {
 }
 
 .parametersdiv {
+  /* display: inline-block;      ineffective since we do control in openjscad.js */
+  
   border: 1px solid rgb(200,200,200);
-
-  border-radius: 5px;      /* css mess *//
-  -moz-border-radius: 5px;
+  border-radius: 5px;     
+  -moz-border-radius: 5px;    /* css mess */
   -webkit-border-radius: 5px;
 
   padding: 10px;
   background: #fff; /* rgba(255,255,255,0.7); */
   opacity: 0.8;
+  
   box-shadow: 0px 0px 15px black;
   margin-bottom: 1em;
   cursor: move;     /* moveable now */
@@ -80,9 +81,9 @@ canvas {
   border: none;
 }
 
-.parametersdiv .header {
-  font-weight: bold;
-  font-size: 0.9em;
+.parametersdiv .parameterheader {
+   font-weight: bold;
+   font-size: 0.9em;
 }
 
 .parametersdiv .caption {
